Fix broken CSS

--- a/style.css
+++ b/style.css
@@ -362,10 +362,7 @@ textarea {
   font: inherit;
 }
 
-texta
-form {
-  display: grid;
-  gaprea {
+textarea {
   min-height: 140px;
 }
 
